codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_pre_turn_compaction_strips_incoming_model_switch_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote pre-turn compaction during model switch currently excludes incoming user input, strips incoming <model_switch> from the compact request payload, and restores it in the post-compaction follow-up request.\",\n&[(\"Initial Request (Previous Model)\", initial_turn_request),\n(\"Pre-turn Work Notes Request\", &requests[1]),\n(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", post_compact_turn_request),])"
---
Scenario: Remote pre-turn compaction during model switch currently excludes incoming user input, strips incoming <model_switch> from the compact request payload, and restores it in the post-compaction follow-up request.

## Initial Request (Previous Model)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:BEFORE_SWITCH_USER

## Pre-turn Work Notes Request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:BEFORE_SWITCH_USER
03:message/assistant:BEFORE_SWITCH_REPLY
04:message/developer:<AUTO_COMPACT_WORK_NOTES_REQUEST>\nToken limit is approaching an...

## Remote Compaction Request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:BEFORE_SWITCH_USER
03:message/assistant:BEFORE_SWITCH_REPLY

## Remote Post-Compaction History Layout
00:message/user:BEFORE_SWITCH_USER
01:message/user:Immediately before compaction, the previous model emitted the fo...
02:compaction:encrypted=true
03:message/developer[3]:
    [01] <model_switch>\nThe user was previously using a different model....
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <personality_spec> The user has requested a new communication st...
04:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:message/user:AFTER_SWITCH_USER
